<resources>
    <string name="app_name">Siglos_WageCalc</string>
    <string name="emptitle">Employee Wage Calculator</string>
    <string name="empname">Employee Name</string>
    <string name="empsalary">Employee Salary</string>
    <string name="emptax">Employee Tax</string>
    <string name="empnsal">Employee Net Salary</string>

    <string name="btnok">Ok</string>
    <string name="btnclear">Clear</string>
</resources>